static/about/CSS/about.css
@import "animation.css";
@font-face {
    font-family: "FunSized";
    src: url("/fonts/FunSized/FunSized.eot");
    /* IE9 Compat Modes */
    src: url("/fonts/FunSized/FunSized.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
    url("/fonts/FunSized/FunSized.otf") format("opentype"), /* Open Type Font */
    url("/fonts/FunSized/FunSized.ttf") format("truetype"), /* Safari, Android, iOS */
    url("/fonts/FunSized/FunSized.woff") format("woff"), /* Modern Browsers */
    url("/fonts/FunSized/FunSized.woff2") format("woff2");
    /* Modern Browsers */
    font-weight: normal;
    font-style: normal;
}


/* font converted using font-converter.net. thank you! */

@font-face {
    font-family: "TheMacabre";
    src: url("/fonts/TheMacabre/TheMacabre.eot");
    /* IE9 Compat Modes */
    src: url("/fonts/TheMacabre/TheMacabre.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
    url("/fonts/TheMacabre/TheMacabre.otf") format("opentype"), /* Open Type Font */
    url("/fonts/TheMacabre/TheMacabre.svg") format("svg"), /* Legacy iOS */
    url("/fonts/TheMacabre/TheMacabre.ttf") format("truetype"), /* Safari, Android, iOS */
    url("/fonts/TheMacabre/TheMacabre.woff") format("woff"), /* Modern Browsers */
    url("/fonts/TheMacabre/TheMacabre.woff2") format("woff2");
    /* Modern Browsers */
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Brendohand';
    src: url('/fonts/BrendoHand/Brendohand-Regular.eot');
    src: url('/fonts/BrendoHand/Brendohand-Regular.eot?#iefix') format('embedded-opentype'), url('/fonts/BrendoHand/Brendohand-Regular.woff2') format('woff2'), url('/fonts/BrendoHand/Brendohand-Regular.woff') format('woff'), url('/fonts/BrendoHand/Brendohand-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

body{
    overflow-x: hidden;
    overflow-y: hidden;
}

header.masthead {
    background-image: url('/img/space.gif');
}

#slogan {
    height: 5rem;
    float: left;
}

strong {
    font-size: 5rem;
}

h1.text-uppercase {
    font-family: 'FunSized';
    font-size: 30px;
}

@media screen and (min-width: 700px) {
    nav {
        max-height: 6rem;
    }
}

hr {
    border-color: rgb(121, 93, 196);
}

a.btn:hover {
    background-color: rgb(0, 0, 0);
    color: rgb(255, 255, 255);
}

a.btn {
    background-color: rgb(255, 255, 255);
    color: rgb(0, 0, 0);
}

.bg-primary {
    background-color: rgb(94, 68, 165)!important;
}

h2.text-white {
    font-weight: bolder;
    font-family: 'Brendohand';
    font-size: 2.8rem;
    color: #ffffff;
}


/*==================== 
	Footer 
====================== */

/* Main Footer */
footer .main-footer{	padding: 20px 0;	background: #252525;}
footer ul{	padding-left: 0;	list-style: none;}

/* Copy Right Footer */
.footer-copyright {	background: #222;	padding: 5px 0;}
.footer-copyright .logo {    display: inherit;}
.footer-copyright nav {    float: right;    margin-top: 5px;}
.footer-copyright nav ul {	list-style: none;	margin: 0;	padding: 0;}
.footer-copyright nav ul li {	border-left: 1px solid #505050;	display: inline-block;	line-height: 12px;	margin: 0;	padding: 0 8px;}
.footer-copyright nav ul li a{	color: #969696;}
.footer-copyright nav ul li:first-child {	border: medium none;	padding-left: 0;}
.footer-copyright p {	color: #969696;	margin: 2px 0 0;}

/* Footer Top */
.footer-top{	background: #252525;	padding-bottom: 30px;	margin-bottom: 30px;	border-bottom: 3px solid #222;}

/* Footer transparent */
footer.transparent .footer-top, footer.transparent .main-footer{	background: transparent;}
footer.transparent .footer-copyright{	background: none repeat scroll 0 0 rgba(0, 0, 0, 0.3) ;}

/* Footer light */
footer.light .footer-top{	background: #f9f9f9;}
footer.light .main-footer{	background: #f9f9f9;}
footer.light .footer-copyright{	background: none repeat scroll 0 0 rgba(255, 255, 255, 0.3) ;}

/* Footer 4 */
.footer- .logo {    display: inline-block}

/*==================== 
	Widgets 
====================== */

.widget {
    padding: 20px;
    margin-bottom: 40px;
}

.widget.widget-last {
    margin-bottom: 0px;
}

.widget.no-box {
    padding: 0;
    background-color: transparent;
    margin-bottom: 40px;
    box-shadow: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    -ms-box-shadow: none;
    -o-box-shadow: none;
}

.widget.subscribe p {
    margin-bottom: 18px;
}

.widget li a {
    color: #ff8d1e;
}

.widget li a:hover {
    color: #4b92dc;
}

.widget-title {
    margin-bottom: 20px;
}

.widget-title span {
    background: #839FAD none repeat scroll 0 0;
    display: block;
    height: 1px;
    margin-top: 25px;
    position: relative;
    width: 20%;
}

.widget-title span::after {
    background: inherit;
    content: "";
    height: inherit;
    position: absolute;
    top: -4px;
    width: 50%;
}

.widget-title.text-center span,
.widget-title.text-center span::after {
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
}

.widget .badge {
    float: right;
    background: #7f7f7f;
}

.typo-light h1,
.typo-light h2,
.typo-light h3,
.typo-light h4,
.typo-light h5,
.typo-light h6,
.typo-light p,
.typo-light div,
.typo-light span,
.typo-light small {
    color: #fff;
}

ul.social-footer2 {
    margin: 0;
    padding: 0;
    width: auto;
}

ul.social-footer2 li {
    display: inline-block;
    padding: 0;
}

ul.social-footer2 li a:hover {
    background-color: #ff8d1e;
}

ul.social-footer2 li a {
    display: block;
    height: 30px;
    width: 30px;
    text-align: center;
}

.btn {
    background-color: #ff8d1e;
    color: #fff;
}

.btn:hover,
.btn:focus,
.btn.active {
    background: #4b92dc;
    color: #fff;
    -webkit-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
    -moz-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
    -ms-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
    -o-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
    -webkit-transition: all 250ms ease-in-out 0s;
    -moz-transition: all 250ms ease-in-out 0s;
    -ms-transition: all 250ms ease-in-out 0s;
    -o-transition: all 250ms ease-in-out 0s;
    transition: all 250ms ease-in-out 0s;
}

img.rounded-circle {
    width: 9rem;
}

div.row {
    text-align: center;
    justify-items: center;
}


/*/////////////////////////////*/


#team {
    width: 98%;
    top: 8rem;
    bottom: 0px;
    margin-left: 1rem;
    margin-right: 1rem;
    height: 0rem;
}

#team .profile {
    float: left;
    width: 20%;
    height: auto;
    background-color: #000000;
    border-top: #000000 solid 1rem;
    border-bottom: #000000 solid 1rem;
    margin-bottom: 3rem;
}

#team img{
    width: 11rem;
}

#team p {
    color: rgb(177, 177, 177);
    font-size: 1rem;
    text-align: justify;
    margin-left: 1.5rem;
    margin-right: 1.5rem;
    height: auto;
}

@media only screen and (max-device-width: 770px) {
    #team .profile {
        float: none;
        width: 100%;
        height: auto;
        background-color: none;
        margin-bottom: 0rem;
        left: 0px;
    }
    #team {
        width: 100%;
        top: 0px;
        bottom: 0px;
        margin-left: 0rem;
        margin-right: 0rem;
        height: auto;
    }
    #team p {
        margin-left: 1rem;
        margin-right: 1rem;
    }
    section{
        width: 100%;
    }
}

